# Bazel workspace file is used to reference external dependencies required to
# build the project. You can use multiple WORKSPACE.bazel files in the same
# project to create new workspaces in subdirectories.

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Google Abseil Libs
git_repository(
    name = "com_google_absl",
    remote = "https://github.com/abseil/abseil-cpp.git",
    tag = "20240116.1",
)

http_archive(
    name = "com_google_protobuf",
    sha256 = "930c2c3b5ecc6c9c12615cf5ad93f1cd6e12d0aba862b572e076259970ac3a53",
    strip_prefix = "protobuf-3.21.12",
    urls = ["https://github.com/protocolbuffers/protobuf/archive/v3.21.12.tar.gz"],
)
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

FARMHASH_COMMIT = "0d859a811870d10f53a594927d0d0b97573ad06d"
FARMHASH_SHA256 = "18392cf0736e1d62ecbb8d695c31496b6507859e8c75541d7ad0ba092dc52115"

http_archive(
    name = "farmhash_archive",
    build_file = "//utils:farmhash.BUILD",
    sha256 = FARMHASH_SHA256,
    strip_prefix = "farmhash-{commit}".format(commit = FARMHASH_COMMIT),
    urls = ["https://github.com/google/farmhash/archive/{commit}.tar.gz".format(commit = FARMHASH_COMMIT)],
)

http_archive(
    name = "com_google_googletest",
    sha256 = "b4870bf121ff7795ba20d20bcdd8627b8e088f2d1dab299a031c1034eddc93d5",
    strip_prefix = "googletest-release-1.11.0",
    urls = ["https://github.com/google/googletest/archive/release-1.11.0.tar.gz"],
)

git_repository(
    name = "com_github_gbbs",
    remote = "https://github.com/ParAlg/gbbs.git",
    commit = "7e75bffb4081cb5a415a917c8abd3754c6f96b2c",
)

git_repository(
    name = "parlaylib",
    remote = "https://github.com/ParAlg/parlaylib.git",
    commit = "6b4a4cdbfeb3c481608a42db0230eb6ebb87bf8d",
    strip_prefix = "include/",
)

http_archive(
    name = "eigen",
    build_file = "//similarity:eigen.BUILD",
    sha256 = "ca7beac153d4059c02c8fc59816c82d54ea47fe58365e8aded4082ded0b820c4",
    strip_prefix = "eigen-eigen-f3a22f35b044",
    urls = [
        "http://mirror.bazel.build/bitbucket.org/eigen/eigen/get/f3a22f35b044.tar.gz",
        "https://bitbucket.org/eigen/eigen/get/f3a22f35b044.tar.gz",
    ],
)
